# llm-sorter

./: .gitignore  Makefile  README.md  pyproject.toml
src/: llm_sorter.py
src/tests/: test_llm_sorter.py
tests/: conftest.py  test_llm_sorter.py
